Added MatchController interface path / with pathParam name; Commons-lang3 dependency
Added MatchController interface path / with pathParam name with function call getAllMatchesByTeamName; added the service which return all matches by team name;
Added Unit test for getAllMatchesByTeamName; Added commons-lang3 dependency for the use of StringUtils...